# DocLayout-YOLO

./: .gitignore  README-zh_CN.md  README.md  demo.py  format_docsynth300k.py  predict_single.py  prepare_data_and_train.sh  prepare_data_for_training.py  pyproject.toml  requirements.txt  settings.py  train.py  training_wrapper.py  val.py
Mesh-candidate Bestfit/: README.md  augmentation.py  combine_layouts.py  rendering.py  visualize.ipynb
assets/: script.sh
doclayout_yolo/: __init__.py
doclayout_yolo/cfg/: __init__.py  default.yaml
doclayout_yolo/cfg/datasets/: d4la.yaml  doclaynet.yaml  docsynth300k.yaml
doclayout_yolo/cfg/models/: README.md
doclayout_yolo/cfg/models/rt-detr/: rtdetr-l.yaml  rtdetr-x.yaml
doclayout_yolo/cfg/models/v10/: yolov10m-doclayout.yaml  yolov10m.yaml
doclayout_yolo/cfg/models/v3/: yolov3-spp.yaml  yolov3-tiny.yaml  yolov3.yaml
doclayout_yolo/cfg/models/v5/: yolov5-p6.yaml  yolov5.yaml
doclayout_yolo/cfg/models/v6/: yolov6.yaml
doclayout_yolo/cfg/models/v8/: yolov8-cls-resnet101.yaml  yolov8-cls-resnet50.yaml  yolov8-cls.yaml  yolov8-ghost-p2.yaml  yolov8-ghost-p6.yaml  yolov8-ghost.yaml  yolov8-obb.yaml  yolov8-p2.yaml  yolov8-p6.yaml  yolov8-pose-p6.yaml  yolov8-pose.yaml  yolov8-rtdetr.yaml  yolov8-seg-p6.yaml  yolov8-seg.yaml  yolov8-world.yaml  yolov8-worldv2.yaml  yolov8.yaml
doclayout_yolo/data/: annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split_dota.py  utils.py
doclayout_yolo/data/explorer/: explorer.py  utils.py
doclayout_yolo/data/explorer/gui/: dash.py
doclayout_yolo/engine/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
doclayout_yolo/hub/: __init__.py  auth.py  session.py  utils.py
doclayout_yolo/models/fastsam/: model.py  predict.py  prompt.py  val.py
doclayout_yolo/models/nas/: model.py  predict.py  val.py
doclayout_yolo/models/rtdetr/: model.py  predict.py  train.py  val.py
doclayout_yolo/models/sam/: build.py  model.py  predict.py
doclayout_yolo/models/sam/modules/: decoders.py  encoders.py  tiny_encoder.py  transformer.py
doclayout_yolo/models/utils/: loss.py  ops.py
doclayout_yolo/models/yolo/: __init__.py  model.py
doclayout_yolo/models/yolo/classify/: __init__.py  predict.py  train.py  val.py
doclayout_yolo/models/yolo/detect/: predict.py  train.py  val.py  val_backup.py
doclayout_yolo/models/yolo/obb/: predict.py  train.py  val.py
doclayout_yolo/models/yolo/pose/: predict.py  train.py  val.py
doclayout_yolo/models/yolo/segment/: predict.py  train.py  val.py
doclayout_yolo/models/yolov10/: model.py  predict.py  train.py  val.py
doclayout_yolo/nn/: autobackend.py  tasks.py
doclayout_yolo/nn/modules/: __init__.py  block.py  g2l_crm.py  head.py
doclayout_yolo/solutions/: __init__.py  ai_gym.py  distance_calculation.py  heatmap.py  object_counter.py  speed_estimation.py
doclayout_yolo/trackers/: README.md  byte_tracker.py  track.py
doclayout_yolo/trackers/utils/: gmc.py  matching.py
doclayout_yolo/utils/: __init__.py  autobatch.py  benchmarks.py  checks.py  dist.py  downloads.py  errors.py  files.py  loss.py  metrics.py  ops.py  plotting.py  tal.py  torch_utils.py  tuner.py
doclayout_yolo/utils/callbacks/: clearml.py  comet.py  dvc.py  hub.py  mlflow.py  neptune.py  raytune.py  tensorboard.py  wb.py
mesh-candidate_bestfit/: README.md  augmentation.py  bestfit_generator.py  map_dict.py  rendering.py  visualize.ipynb
mesh-candidate_bestfit/utils/: base.py  process.py
pretraining_data_generation/: README.md  bestfit_generator.py  combine_layouts.py
